# docchat-ai

./: .gitignore  Makefile  README.md  pyproject.toml
images/cloud/: Dockerfile
images/local/: Dockerfile
notebooks/: docchat-ai.ipynb
src/: main.py  main_lambda.py
src/data/: document_loader.py
src/prompts/: prompt_builder.py
