[tool.poetry]
name = "docchat-ai"
version = "0.1.0"
description = "A tool that uses LLMs and VectorDBs to extract insights by enabling conversation with PDF documents"
authors = ["Krupique <krupique@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
openai = "^1.57.4"
pypdf = "^5.1.0"
langchain = "^0.3.12"
langchain-community = "^0.3.12"
chromadb = "^0.5.23"
pandas = "^2.2.3"
tiktoken = "^0.8.0"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
tqdm = "^4.67.1"
langchain-openai = "^0.2.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
